- Added wxMutex::LockTimeout() (Aleksandr Napylov)
- Set locale to the default in all ports, not just wxGTK
- Added wxJoystick::GetButtonState/Position() (Frank C Szczerba)
- Added wxGridUpdateLocker helper class (Evgeniy Tarassov)
- Support wxGRID_AUTOSIZE in wxGrid::SetRow/ColLabelSize() (Evgeniy Tarassov)
- Added wxMemoryInputStream(wxInputStream&) ctor (Stas Sergeev)

wxGTK:

- Native implementation for wxHyperlinkCtrl (Francesco Montorsi)
- Implemented support for underlined fonts in wxStaticText.
- wxTopLevelWindow::SetSizeHints size increments now work.
- wxTopLevelWindow::GetSize() returns the size including the WM decorations.
- wxTopLevelWindow::GetClientSize() returns 0x0 when the window is minimized.
- Added support for colour cursors (Pascal Monasse).
- Setting foreground colour of single line wxTextCtrl now works

wxMac:

- Fix duplicate (empty) help menu in non-English programs (Andreas Jacobs)

wxMSW:

- Fixed infinite loop in wxThread::Wait() in console applications.
- Return the restored window size from GetSize() when window is minimized.


2.8.3
-----

All:

- Shut down the sockets gracefully (Sergio Aguayo)

wxMac:

- Corrected top border size for wxStaticBox with empty label (nusi)

wxMSW:

- Fixed wxFileName::GetSize() for large files


2.8.2
-----

All:

- Added wxSizerFlags::Shaped() and FixedMinSize() methods.
- Added wxCSConv::IsOk() (Manuel Martin).
- Added wxDateTime::GetDateOnly().
- Made wxTextFile work with unseekable files again (David Hart).
- Added wxCONFIG_USE_SUBDIR flag to wxFileConfig (Giuseppe Bilotta).
- Added wxSearchCtrl::[Get|Set]DescriptiveText.
- Fixed detection of number of processors under Linux 2.6
- Fixed Base64 computation in wxHTTP (p_michalczyk)
- Fix handling of wxSOCKET_REUSEADDR in wxDatagramSocket (troelsk)

Unix Ports:

- Fixed crash in wxGetUserName() in Unicode build

wxMSW

- Fix lack of spin control update event when control lost focus.
- Corrected drawing of bitmaps for disabled menu items.

wxGTK
